modificati margini e create 5 card

--- a/index.html
+++ b/index.html
@@ -24,11 +24,50 @@
 
             <!-- main cards -->
             <main>
-                <div class="card first">
-                    <img src="assets/img/male1.png" alt="Marco Bianchi">
-                    <h2 class="white">Marco Bianchi</h2>
-                    <div class="team-position white">Designer</div>
-                    <a href="">marcobianchi@team.com</a>
+                <div class="container clearfix">
+                    
+                    <div class="card">
+                        <img src="assets/img/male1.png" alt="Marco Bianchi">
+                        <h2 class="white">Marco Bianchi</h2>
+                        <div class="team-position white">Designer</div>
+                        <a href="">marcobianchi@team.com</a>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/img/male1.png" alt="Marco Bianchi">
+                        <h2 class="white">Marco Bianchi</h2>
+                        <div class="team-position white">Designer</div>
+                        <a href="">marcobianchi@team.com</a>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/img/male1.png" alt="Marco Bianchi">
+                        <h2 class="white">Marco Bianchi</h2>
+                        <div class="team-position white">Designer</div>
+                        <a href="">marcobianchi@team.com</a>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/img/male1.png" alt="Marco Bianchi">
+                        <h2 class="white">Marco Bianchi</h2>
+                        <div class="team-position white">Designer</div>
+                        <a href="">marcobianchi@team.com</a>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/img/male1.png" alt="Marco Bianchi">
+                        <h2 class="white">Marco Bianchi</h2>
+                        <div class="team-position white">Designer</div>
+                        <a href="">marcobianchi@team.com</a>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/img/male1.png" alt="Marco Bianchi">
+                        <h2 class="white">Marco Bianchi</h2>
+                        <div class="team-position white">Designer</div>
+                        <a href="">marcobianchi@team.com</a>
+                    </div>
+                    
                 </div>
             </main>
         </div>
