--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Meet Our Team</title>
 
         <!-- css -->
         <link rel="stylesheet" href="css/style.css">
@@ -26,12 +26,7 @@
             <main>
                 <div class="container clearfix">
                     
-                    <div class="card">
-                        <img src="assets/img/male1.png" alt="Marco Bianchi">
-                        <h2 class="white">Marco Bianchi</h2>
-                        <div class="team-position white">Designer</div>
-                        <a href="">marcobianchi@team.com</a>
-                    </div>
+                    <!-- Row 1 -->
 
                     <div class="card">
                         <img src="assets/img/male1.png" alt="Marco Bianchi">
@@ -41,11 +36,20 @@
                     </div>
 
                     <div class="card">
-                        <img src="assets/img/male1.png" alt="Marco Bianchi">
-                        <h2 class="white">Marco Bianchi</h2>
-                        <div class="team-position white">Designer</div>
-                        <a href="">marcobianchi@team.com</a>
+                        <img src="assets/img/female1.png" alt="Laura Rossi">
+                        <h2 class="white">Laura Rossi</h2>
+                        <div class="team-position white">Front-end Developer</div>
+                        <a href="">laurarossi@team.com</a>
                     </div>
+
+                    <div class="card">
+                        <img src="assets/img/male2.png" alt="Giorgio Verdi">
+                        <h2 class="white">Giorgio Verdi</h2>
+                        <div class="team-position white">Back-end Developer</div>
+                        <a href="">giorgioverdi@team.com</a>
+                    </div>
+
+                    <!-- Row 2 -->
 
                     <div class="card">
                         <img src="assets/img/male1.png" alt="Marco Bianchi">
