--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
                     <!-- Row 2 -->
 
                     <div class="card">
-                        <img src="assets/img/male1.png" alt="Marco Bianchi">
-                        <h2 class="white">Marco Bianchi</h2>
-                        <div class="team-position white">Designer</div>
-                        <a href="">marcobianchi@team.com</a>
+                        <img src="assets/img/female2.png" alt="Marta Ipsum">
+                        <h2 class="white">Marta Ipsum</h2>
+                        <div class="team-position white">SEO Specialist</div>
+                        <a href="">martaipsum@team.com</a>
                     </div>
 
                     <div class="card">
-                        <img src="assets/img/male1.png" alt="Marco Bianchi">
-                        <h2 class="white">Marco Bianchi</h2>
-                        <div class="team-position white">Designer</div>
-                        <a href="">marcobianchi@team.com</a>
+                        <img src="assets/img/male3.png" alt="Roberto Lorem">
+                        <h2 class="white">Roberto Lorem</h2>
+                        <div class="team-position white">Project Manager</div>
+                        <a href="">robertolorem@team.com</a>
                     </div>
 
                     <div class="card">
-                        <img src="assets/img/male1.png" alt="Marco Bianchi">
-                        <h2 class="white">Marco Bianchi</h2>
-                        <div class="team-position white">Designer</div>
-                        <a href="">marcobianchi@team.com</a>
+                        <img src="assets/img/female3.png" alt="Daniela Amet">
+                        <h2 class="white">Daniela Amet</h2>
+                        <div class="team-position white">Analyst</div>
+                        <a href="">danielaamet@team.com</a>
                     </div>
                     
                 </div>
