--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                     <div class="card">
                         <img src="assets/img/female3.png" alt="Daniela Amet">
-                        <h2 class="white">Daniela Amet</h2>
+                        <h2 class="white">Daniela Amett</h2>
                         <div class="team-position white">Analyst</div>
                         <a href="">danielaamet@team.com</a>
                     </div>
